# src/main/java/com/example/demo/entities/PaymentTypeEnum.java
@@ -1,0 +1,10 @@
+package com.example.demo.entities;
+
+public enum PaymentTypeEnum {
+
+    PAYPAL,
+
+    CREDIT_CARD,
+
+    GIFT_CARD
+}
